--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.0",
+    "isomorphic-fetch": "^3.0.0",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
+    "react-instantsearch-dom": "^6.8.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "resolve-url-loader": "^3.1.2",
@@ -46,5 +48,16 @@
   },
   "devDependencies": {
     "bootstrap": "^4.5.3"
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/MeryAmun/BEWOCA.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/MeryAmun/BEWOCA/issues"
   }
 }
