--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://localhost:5000/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.0",
+    "http-proxy-middleware": "^1.0.6",
     "isomorphic-fetch": "^3.0.0",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
@@ -14,6 +16,7 @@
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-instantsearch-dom": "^6.8.2",
+    "react-player": "^2.7.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "resolve-url-loader": "^3.1.2",
