--- a/package.json
+++ b/package.json
@@ -1,26 +1,28 @@
 {
+  "$schema": "http://json-schema.org/draft-04/schema#",
+  "title": "JSON schema for NPM package.json files",
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
   "proxy": "https://localhost:5000/",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.5",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "axios": "^0.21.0",
-    "http-proxy-middleware": "^1.0.6",
-    "isomorphic-fetch": "^3.0.0",
-    "jquery": "^3.5.1",
-    "popper.js": "^1.16.1",
-    "react": "^17.0.1",
-    "react-bootstrap": "^1.4.0",
-    "react-dom": "^17.0.1",
-    "react-instantsearch-dom": "^6.8.2",
-    "react-player": "^2.7.2",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.0",
-    "resolve-url-loader": "^3.1.2",
-    "web-vitals": "^0.2.4"
+    "@testing-library/jest-dom": ["^5.11.5"],
+    "@testing-library/react": ["^11.1.0"],
+    "@testing-library/user-event": ["^12.1.10"],
+    "axios": ["^0.21.0"],
+    "http-proxy-middleware": ["^1.0.6"],
+    "isomorphic-fetch": ["^3.0.0"],
+    "jquery": ["^3.5.1"],
+    "popper.js": ["^1.16.1"],
+    "react": ["^17.0.1"],
+    "react-bootstrap": ["^1.4.0"],
+    "react-dom": ["^17.0.1"],
+    "react-instantsearch-dom": ["^6.8.2"],
+    "react-player": ["^2.7.2"],
+    "react-router-dom": ["^5.2.0"],
+    "react-scripts": ["4.0.0"],
+    "resolve-url-loader": ["^3.1.2"],
+    "web-vitals":[ "^0.2.4"]
   },
   "homepage": "https://meryamun.github.io/BEWOCA/",
   "scripts": {
